[package]
name = "actix_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config =  { version = "1.5.14", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1.65.0", features = ["behavior-version-latest"] }
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
once_cell = "1.20.2"
